k8s/local-connected/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    app.kubernetes.io/name: contoso-insurance
    app.kubernetes.io/part-of: contoso-insurance
