k8s/local-connected/worker-projections-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-projections
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-projections
  template:
    metadata:
      labels:
        app: worker-projections
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: worker-projections
          image: __ACR_LOGIN_SERVER__/__REPOSITORY_PREFIX__/worker-projections:__TAG__
          imagePullPolicy: IfNotPresent
