k8s/local-connected/worker-quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-quotes
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-quotes
  template:
    metadata:
      labels:
        app: worker-quotes
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: worker-quotes
          image: __ACR_LOGIN_SERVER__/__REPOSITORY_PREFIX__/worker-quotes:__TAG__
          imagePullPolicy: IfNotPresent
